--- a/backend/views/categorias.html
+++ b/backend/views/categorias.html
@@ -37,6 +37,18 @@
       </form>
       <span>Gever Rodríguez</span>
     </main>
+    <div id="bg-disable" class="inactive dp-flex ai-c jc-c">
+      <div id="alert-msg" class="dp-flex ai-c jc-c fd-c">
+        <h2>Por favor, complete los campos:</h2>
+        <ul>
+          <!-- <li>ID</li>
+          <li>Nombre</li>
+          <li>Categoría</li>
+          <li>Precio</li> -->
+        </ul>
+        <span id="name-alert">Gever Rodriguez</span>
+      </div>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
