--- a/assets/css/productos.css
+++ b/assets/css/productos.css
@@ -131,22 +131,32 @@ span {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: var(--white-shadow);
+  background: var(--disabled-bg);
 }
 
 #alert-msg {
   border: 0.3rem solid red;
   border-radius: 2rem;
   min-width: 25rem;
-  height: 8rem;
-  padding: 0 2rem;
+  padding: 2rem;
   background-color: var(--btn-color-red);
-  box-shadow: 0 0 0.5rem var(--btn-color-red), 0 0 2rem var(--btn-color-red),
-    0 0 5rem var(--btn-color-red);
+  box-shadow: 0 0 1rem 0.3rem var(--btn-color-red), 0 0 3rem var(--btn-color-red),
+    0 0 10rem var(--btn-color-red);
 }
 
 #alert-msg h2 {
   font-size: 2rem;
+}
+
+#alert-msg ul {
+  margin: 2rem;
+  width: 80%;
+}
+
+#alert-msg ul li {
+  font-size: 1.6rem;
+  font-style: italic;
+
 }
 
 /*End Alert Message*/
