--- a/backend/views/productos.html
+++ b/backend/views/productos.html
@@ -77,8 +77,14 @@
       <span>Gever Rodríguez</span>
     </main>
     <div id="bg-disable" class="inactive dp-flex ai-c jc-c">
-      <div id="alert-msg" class="dp-flex ai-c jc-sa fd-c">
-        <h2>Ingrese un ID</h2>
+      <div id="alert-msg" class="dp-flex ai-c jc-c fd-c">
+        <h2>Por favor, complete los campos:</h2>
+        <ul>
+          <!-- <li>ID</li>
+          <li>Nombre</li>
+          <li>Categoría</li>
+          <li>Precio</li> -->
+        </ul>
         <span id="name-alert">Gever Rodriguez</span>
       </div>
     </div>
