--- a/backend/views/categorias.html
+++ b/backend/views/categorias.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/assets/css/estilos.css" />
     <link rel="stylesheet" href="/assets/css/display.css" />
     <link rel="stylesheet" href="/assets/css/categorias.css" />
+    <link rel="stylesheet" href="/assets/css/alertMsg.css" />
     <title>Alta de Categorias</title>
   </head>
   <body class="dp-flex ai-c jc-c">
@@ -46,7 +47,7 @@
           <li>Categoría</li>
           <li>Precio</li> -->
         </ul>
-        <span id="name-alert">Gever Rodriguez</span>
+        <span id="name-alert">Gever Rodríguez</span>
       </div>
     </div>
     <script
