--- a/backend/views/categorias.html
+++ b/backend/views/categorias.html
@@ -12,7 +12,11 @@
   <body class="dp-flex ai-c jc-c">
     <main class="dp-flex ai-c jc-c fd-c">
       <h1>Alta de Categorias</h1>
-      <form class="dp-flex ai-c jc-sa fd-c" action="" method="POST">
+      <form
+        class="dp-flex ai-c jc-sa fd-c"
+        action="/class/autoload.php"
+        method="POST"
+      >
         <div class="form-label-container dp-flex ai-c jc-c fd-c">
           <label for="identifier"></label>
           <input
