added and tested save function

--- a/backend/views/categorias.html
+++ b/backend/views/categorias.html
@@ -14,7 +14,7 @@
       <h1>Alta de Categorias</h1>
       <form
         class="dp-flex ai-c jc-sa fd-c"
-        action="/class/autoload.php"
+        action="/backend/categorias.php"
         method="POST"
       >
         <div class="form-label-container dp-flex ai-c jc-c fd-c">
