added some style sh*ts

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,18 +1,70 @@
 :root {
-    color-scheme: light dark;
-    --white-shadow: rgba(255, 255, 255, 0.2);
-    --disabled-bg: rgba(254, 222, 222, 0.679);
-    --btn-color-blue: rgb(78, 78, 255);
-    --btn-color-red: rgb(243, 78, 78);
+  color-scheme: light dark;
+  --white-shadow: rgba(255, 255, 255, 0.2);
+  --dark-shadow: rgba(0, 0, 0, 0.9);
+  --disabled-bg: rgba(254, 222, 222, 0.679);
+  --btn-color-blue: rgb(78, 78, 255);
+  --btn-color-red: rgb(243, 78, 78);
 }
 
 html {
-    font-size: 62.5%;
-    font-family: sans-serif;
+  font-size: 62.5%;
+  font-family: sans-serif;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+body {
+  height: 100vh;
+  background-image: radial-gradient(
+      circle,
+      transparent,
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.8) 100%
+    ),
+    url(/assets/img/logo_empresa.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+/* Nav Bar */
+header {
+  height: 7rem;
+  padding: 0 2rem;
+  background-color: var(--dark-shadow);
+  box-shadow: 0 0 2rem 0.5rem var(--dark-shadow);
+}
+
+#nav-bar {
+  height: inherit;
+}
+
+#nav-bar h1 {
+  font-size: 3.6rem;
+}
+
+#nav-bar ul {
+  list-style: none;
+}
+
+#nav-bar a {
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.8rem;
+  box-shadow: 0 0 1rem var(--white-shadow);
+  margin: 0 1rem;
+  padding: 2rem 0;
+  border-radius: 2rem;
+  min-width: 15rem;
+  text-align: center;
+  color: white;
+}
+
+#nav-bar a:hover {
+  background-color: var(--white-shadow);
+}
+/* End of Nav Bar */
