--- a/assets/css/categorias.css
+++ b/assets/css/categorias.css
@@ -5,12 +5,13 @@ body {
 }
 
 main {
+  background-color: var(--dark-shadow);
   box-shadow: 0 0 0.5rem var(--white-shadow), 0 0 1.5rem var(--white-shadow),
     0 0 5rem var(--white-shadow);
   border-radius: 2rem;
   padding: 4rem 3rem;
   -webkit-box-reflect: below 0.1rem
-    linear-gradient(transparent, rgba(0, 0, 0, 0.2));
+    linear-gradient(transparent, rgba(0, 0, 0, 0.6));
 }
 
 h1 {
