--- a/backend/views/productos.html
+++ b/backend/views/productos.html
@@ -71,7 +71,11 @@
           </div>
         </div>
         <div class="form-btn-container dp-flex ai-c jc-sa">
-          <input type="button" value="Cancelar" />
+          <input
+            type="button"
+            onclick="window.location.href = '/index.php';"
+            value="Cancelar"
+          />
           <input id="btn-submit" type="submit" value="Guardar" />
         </div>
       </form>
