--- a/backend/views/categorias.html
+++ b/backend/views/categorias.html
@@ -10,6 +10,17 @@
     <title>Alta de Categorias</title>
   </head>
   <body class="dp-flex ai-c jc-c">
+    <header>
+      <nav id="nav-bar" class="dp-flex ai-c jc-sb">
+        <h1 onclick="window.location.href = '/index.php';">CATEGORIAS</h1>
+        <ul class="dp-flex">
+          <li><a href="/backend/views/categorias.html">Categorias</a></li>
+          <li><a href="/backend/categorias.php">Lista Categorias</a></li>
+          <li><a href="/backend/views/productos.html">Productos</a></li>
+          <li><a href="/backend/productos.php">Lista Productos</a></li>
+        </ul>
+      </nav>
+    </header>
     <main class="dp-flex ai-c jc-c fd-c">
       <h1>Alta de Categorias</h1>
       <form
