--- a/backend/views/lista_categorias.html
+++ b/backend/views/lista_categorias.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/css/estilos.css" />
     <link rel="stylesheet" href="/assets/css/display.css" />
+    <link rel="stylesheet" href="/assets/css/lista_categorias.css" />
     <title>Lista Categorias</title>
   </head>
-  <body>
+  <body class="dp-flex ai-c fd-c">
     <header>
       <nav id="nav-bar" class="dp-flex ai-c jc-sb">
-        <h1>Lista de Categorias</h1>
+        <h1 onclick="window.location.href = '/index.php';">
+          LISTA DE CATEGORIAS
+        </h1>
         <ul class="dp-flex">
           <li><a href="/backend/views/categorias.html">Categorias</a></li>
           <li><a href="/backend/categorias.php">Lista Categorias</a></li>
@@ -19,21 +22,25 @@
         </ul>
       </nav>
     </header>
-    <table>
-      <thead>
-        <tr>
-          <th>Identificador</th>
-          <th>Nombre</th>
-        </tr>
-      </thead>
-      <tbody>
-        <?php foreach($categories as $category):?>
-        <tr>
-          <td><?=$category['identificador']?></td>
-          <td><?=$category['nombre']?></td>
-        </tr>
-        <?php endforeach;?>
-      </tbody>
-    </table>
+    <main class="dp-flex ai-c jc-c">
+      <div class="table-bg">
+        <table>
+          <thead>
+            <tr>
+              <th>IDENTIFICADOR</th>
+              <th>NOMBRE CATEGORIA</th>
+            </tr>
+          </thead>
+          <tbody>
+            <?php foreach($categories as $category):?>
+            <tr>
+              <td><?=strtoupper($category['identificador'])?></td>
+              <td><?=strtoupper($category['nombre'])?></td>
+            </tr>
+            <?php endforeach;?>
+          </tbody>
+        </table>
+      </div>
+    </main>
   </body>
 </html>
