added load categories on productos.html

--- a/assets/css/productos.css
+++ b/assets/css/productos.css
@@ -45,6 +45,10 @@ form {
   width: inherit;
 }
 
+.form-label-container #category {
+  font-size: 1.8rem;
+}
+
 .form-label-container textarea {
   font-family: sans-serif;
   min-width: 50rem;
