--- a/backend/views/lista_categorias.html
+++ b/backend/views/lista_categorias.html
@@ -11,13 +11,13 @@
   <body class="dp-flex ai-c fd-c">
     <header>
       <nav id="nav-bar" class="dp-flex ai-c jc-sb">
-        <h1 onclick="window.location.href = '/index.php';">
-          LISTA DE CATEGORIAS
-        </h1>
+        <h1 onclick="window.location.href = '/index.php';">ELITECH</h1>
         <ul class="dp-flex">
           <li><a href="/backend/views/categorias.html">Categorias</a></li>
           <li><a href="/backend/categorias.php">Lista Categorias</a></li>
-          <li><a href="/backend/productos.php">Productos</a></li>
+          <li>
+            <a href="/backend/productos.php?forProducts=true">Productos</a>
+          </li>
           <li><a href="/backend/productos.php">Lista Productos</a></li>
         </ul>
       </nav>
