--- a/backend/views/productos.html
+++ b/backend/views/productos.html
@@ -12,11 +12,13 @@
   <body class="dp-flex ai-c jc-c">
     <header>
       <nav id="nav-bar" class="dp-flex ai-c jc-sb">
-        <h1 onclick="window.location.href = '/index.php';">PRODUCTOS</h1>
+        <h1 onclick="window.location.href = '/index.php';">ELITECH</h1>
         <ul class="dp-flex">
           <li><a href="/backend/views/categorias.html">Categorias</a></li>
           <li><a href="/backend/categorias.php">Lista Categorias</a></li>
-          <li><a href="/backend/productos.php">Productos</a></li>
+          <li>
+            <a href="/backend/productos.php?forProducts=true">Productos</a>
+          </li>
           <li><a href="/backend/productos.php">Lista Productos</a></li>
         </ul>
       </nav>
@@ -69,12 +71,12 @@
               <option value="" disabled selected>Seleccionar categoría</option>
               <?php foreach($data as $item):?>
               <option
-                id="<?= $item->getId() ?>"
-                value="<?= strtoupper($item->getName()) ?>"
+                id="<?=$item['identificador']?>"
+                value="<?=strtoupper($item['nombre'])?>"
               >
-                <?= strtoupper($item->getName()) ?>
+                <?=strtoupper($item['nombre'])?>
               </option>
-              <?php endforeach; ?>
+              <?php endforeach;?>
             </select>
             <label for="price"></label>
             <input
