working on cards styles

--- a/backend/views/lista_productos.html
+++ b/backend/views/lista_productos.html
@@ -24,8 +24,8 @@
     </header>
     <main class="dp-flex ai-c jc-fe fd-c">
       <h2>Productos</h2>
-      <div class="card-container dp-flex fw-nowrap">
-        <div class="card dp-flex ai-c jc-sb fd-c">
+      <ul class="card-container dp-flex fw-wrap">
+        <li class="card dp-flex ai-c jc-sb fd-c">
           <picture>
             <img src="" alt="product-logo" />
           </picture>
@@ -40,8 +40,72 @@
           </div>
           <p>CLP 2.990</p>
           <span>Categoria</span>
-        </div>
-      </div>
+        </li>
+        <li class="card dp-flex ai-c jc-sb fd-c">
+          <picture>
+            <img src="" alt="product-logo" />
+          </picture>
+          <h3>Producto 1</h3>
+          <div class="desc-container">
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum
+              alias ratione cupiditate, quibusdam mollitia modi sunt aliquam
+              dignissimos voluptas vel non harum id molestias voluptate
+              excepturi, nesciunt velit est maiores.
+            </p>
+          </div>
+          <p>CLP 2.990</p>
+          <span>Categoria</span>
+        </li>
+        <li class="card dp-flex ai-c jc-sb fd-c">
+          <picture>
+            <img src="" alt="product-logo" />
+          </picture>
+          <h3>Producto 1</h3>
+          <div class="desc-container">
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum
+              alias ratione cupiditate, quibusdam mollitia modi sunt aliquam
+              dignissimos voluptas vel non harum id molestias voluptate
+              excepturi, nesciunt velit est maiores.
+            </p>
+          </div>
+          <p>CLP 2.990</p>
+          <span>Categoria</span>
+        </li>
+        <li class="card dp-flex ai-c jc-sb fd-c">
+          <picture>
+            <img src="" alt="product-logo" />
+          </picture>
+          <h3>Producto 1</h3>
+          <div class="desc-container">
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum
+              alias ratione cupiditate, quibusdam mollitia modi sunt aliquam
+              dignissimos voluptas vel non harum id molestias voluptate
+              excepturi, nesciunt velit est maiores.
+            </p>
+          </div>
+          <p>CLP 2.990</p>
+          <span>Categoria</span>
+        </li>
+        <li class="card dp-flex ai-c jc-sb fd-c">
+          <picture>
+            <img src="" alt="product-logo" />
+          </picture>
+          <h3>Producto 1</h3>
+          <div class="desc-container">
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum
+              alias ratione cupiditate, quibusdam mollitia modi sunt aliquam
+              dignissimos voluptas vel non harum id molestias voluptate
+              excepturi, nesciunt velit est maiores.
+            </p>
+          </div>
+          <p>CLP 2.990</p>
+          <span>Categoria</span>
+        </li>
+      </ul>
     </main>
   </body>
 </html>
