--- a/assets/css/lista_productos.css
+++ b/assets/css/lista_productos.css
@@ -1,5 +1,6 @@
 main {
   height: 100vh;
+  width: 100vw;
 }
 
 h2 {
@@ -9,7 +10,7 @@ h2 {
 .card-container {
   border: solid 0.1rem white;
   border-radius: 2rem;
-  width: 100rem;
+  width: 80%;
   height: 55rem;
   margin: 1rem 0;
   background-color: var(--dark-shadow);
@@ -21,8 +22,42 @@ h2 {
   border-radius: 1.5rem 1.5rem 0 0;
   width: 20rem;
   height: 25rem;
+  overflow: hidden;
+  margin: 1rem 1.5rem;
+}
+
+.card picture {
+  border: solid 0.1rem white;
+  width: 100%;
+  height: 10rem;
+}
+
+.card h3 {
+  font-size: 1.6rem;
 }
 
 .desc-container {
   margin: 0 0.5rem;
+  overflow: scroll;
+  height: 7rem;
+}
+
+.desc-container p {
+  font-size: 1.3rem;
+}
+
+.card > p {
+  font-size: 1.6rem;
+  align-self: flex-end;
+  margin-right: 0.5rem;
+}
+
+.card > span {
+  align-self: flex-end;
+  margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
