--- a/backend/views/productos.html
+++ b/backend/views/productos.html
@@ -30,6 +30,7 @@
         class="dp-flex ai-c jc-sa fd-c"
         action="/backend/productos.php"
         method="POST"
+        enctype="multipart/form-data"
       >
         <div class="form-label-container dp-flex ai-c jc-c fd-c">
           <div class="form-id-name-container dp-flex ai-c jc-sb">
