--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -6,6 +6,7 @@
   --disabled-bg: rgba(254, 222, 222, 0.679);
   --btn-color-blue: rgb(78, 78, 255);
   --btn-color-red: rgb(243, 78, 78);
+  --card-color: #1857a0ba;
 }
 
 html {
