--- a/assets/css/lista_productos.css
+++ b/assets/css/lista_productos.css
@@ -18,18 +18,23 @@ h2 {
 }
 
 .card {
-  border: solid 0.1rem white;
   border-radius: 1.5rem 1.5rem 0 0;
   width: 20rem;
   height: 25rem;
   overflow: hidden;
   margin: 1rem 1.5rem;
+  background-color: var(--card-color);
+  box-shadow: 0 0 0.5rem var(--white-shadow), 0 0 1.5rem var(--white-shadow);
 }
 
 .card picture {
-  border: solid 0.1rem white;
   width: 100%;
   height: 10rem;
+  overflow: hidden;
+}
+
+.card picture img {
+  width: 100%;
 }
 
 .card h3 {
