--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -7,6 +7,7 @@
   --btn-color-blue: rgb(78, 78, 255);
   --btn-color-red: rgb(243, 78, 78);
   --card-color: #1857a0ba;
+  --card-line-color: #002c5eba;
 }
 
 html {
