--- a/assets/css/lista_productos.css
+++ b/assets/css/lista_productos.css
@@ -3,34 +3,33 @@ main {
   width: 100vw;
 }
 
-h2 {
-  font-size: 3.2rem;
-}
-
 .card-container {
   border: solid 0.1rem white;
   border-radius: 2rem;
-  width: 80%;
-  height: 55rem;
+  width: 96.2rem;
+  height: 60rem;
   margin: 1rem 0;
   background-color: var(--dark-shadow);
   padding: 2rem;
+  overflow: scroll;
 }
 
 .card {
-  border-radius: 1.5rem 1.5rem 0 0;
+  border-radius: 1rem;
   width: 20rem;
   height: 25rem;
   overflow: hidden;
   margin: 1rem 1.5rem;
   background-color: var(--card-color);
   box-shadow: 0 0 0.5rem var(--white-shadow), 0 0 1.5rem var(--white-shadow);
+  cursor: pointer;
 }
 
 .card picture {
   width: 100%;
-  height: 10rem;
+  height: 14rem;
   overflow: hidden;
+  border-bottom: solid 0.1rem var(--card-line-color);
 }
 
 .card picture img {
@@ -38,29 +37,38 @@ h2 {
 }
 
 .card h3 {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
+  width: 100%;
+  text-align: center;
+  padding: 0.25rem 0;
+  margin: 0.25rem 0;
+  border-bottom: solid 0.1rem var(--card-line-color);
 }
 
 .desc-container {
   margin: 0 0.5rem;
   overflow: scroll;
-  height: 7rem;
+  height: 5rem;
+  border: solid 0.1rem var(--card-line-color);
+  border-radius: 0.5rem;
+  padding: 0 0.5rem;
 }
 
 .desc-container p {
   font-size: 1.3rem;
 }
 
-.card > p {
-  font-size: 1.6rem;
-  align-self: flex-end;
-  margin-right: 0.5rem;
+.card .cp-container {
+  width: 100%;
+  padding: 0.5rem;
 }
 
-.card > span {
-  align-self: flex-end;
-  margin-right: 0.5rem;
-  margin-bottom: 0.5rem;
+.card .cp-container > p {
+  font-size: 1.6rem;
+}
+
+.card .cp-container > span {
+  font-style: italic;
 }
 
 ::-webkit-scrollbar {
