--- a/backend/views/lista_productos.html
+++ b/backend/views/lista_productos.html
@@ -11,8 +11,14 @@
   <body class="dp-flex ai-c jc-c">
     <header>
       <nav id="nav-bar" class="dp-flex ai-c jc-sb">
-        <h1 onclick="window.location.href = '/index.php';">ELITECH</h1>
+        <div class="logo dp-flex ai-c">
+          <picture>
+            <img src="/assets/img/logo.jpg" alt="elitech-logo" />
+          </picture>
+          <h1 onclick="window.location.href = '/index.php';">ELITECH</h1>
+        </div>
         <ul class="dp-flex">
+          <li><a href="/index.php">Home</a></li>
           <li><a href="/backend/views/categorias.html">Categorias</a></li>
           <li><a href="/backend/categorias.php">Lista Categorias</a></li>
           <li>
