--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -8,6 +8,7 @@
   --btn-color-red: rgb(243, 78, 78);
   --card-color: #1857a0ba;
   --card-line-color: #002c5eba;
+  --nav-selection-color: #b32878;
 }
 
 html {
@@ -51,14 +52,15 @@ header {
 }
 
 #nav-bar picture {
-  height: 100%;
-  width: 6rem;
+  height: 6rem;
+  width: max-content;
   overflow: hidden;
   border-radius: 1.2rem;
+  box-shadow: 0 0 1rem var(--nav-selection-color);
 }
 
 #nav-bar picture img {
-  width: 100%;
+  height: 100%;
 }
 
 #nav-bar h1 {
@@ -77,7 +79,7 @@ header {
   display: inline-block;
   font-size: 1.8rem;
   font-weight: bold;
-  box-shadow: 0 0 1rem var(--white-shadow);
+  box-shadow: 0 0 1rem var(--nav-selection-color);
   margin: 0 1rem;
   padding: 2rem 0;
   border-radius: 2rem;
@@ -87,9 +89,14 @@ header {
 }
 
 #nav-bar a:hover {
-  background-color: var(--white-shadow-o50);
-  box-shadow: 0 0 1rem var(--white-shadow-o50),
-    0 0 2.5rem var(--white-shadow-o50), 0 0 8rem var(--white-shadow-o50);
+  background-color: var(--nav-selection-color);
+  box-shadow: 0 0 1rem var(--nav-selection-color),
+    0 0 2.5rem var(--nav-selection-color), 0 0 8rem var(--nav-selection-color);
   color: black;
+}
+
+#nav-bar h1:hover {
+  text-shadow: 0 0 1rem var(--nav-selection-color),
+    0 0 2.5rem var(--nav-selection-color), 0 0 8rem var(--nav-selection-color);
 }
 /* End of Nav Bar */
