--- a/views/home.html
+++ b/views/home.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/assets/css/estilos.css" />
     <link rel="stylesheet" href="/assets/css/display.css" />
     <link rel="stylesheet" href="/assets/css/index.css" />
-    <link rel="stylesheet" href="/assets/css/lista_productos.css" />
+    <link rel="stylesheet" href="/assets/css/home.css" />
     <title>Index.php</title>
   </head>
   <body>
